--- a/projet/assets/css/style.css
+++ b/projet/assets/css/style.css
@@ -1507,7 +1507,7 @@ h2[style*="margin-top: 40px"] {
 
 /* --- Conteneur Principal --- */
 .container-page {
-    background: linear-gradient(135deg, rgb(3, 50, 85) 0%,rgb(3, 50, 85); 100%);
+    background: linear-gradient(135deg, rgb(3, 50, 85) 0%, rgb(2, 30, 50) 100%);
     padding: 20px; /* Réduit pour laisser le titre monter */
     border-radius: 30px;
     border: 7px solid #ffffff;
