--- a/projet/assets/css/style.css
+++ b/projet/assets/css/style.css
@@ -1505,3 +1505,54 @@ h2[style*="margin-top: 40px"] {
 /*page export csv*/
 
 
+.container-page {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; /* espace haut / bas */
+    align-items: center;
+    padding: 60px 0;
+}
+
+/* Titre en haut */
+.container-page h1 {
+    color: white;
+    font-size: 2.5rem;
+    margin: 0;
+}
+
+/* Formulaire en bas */
+.container-page form {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+/* Label */
+.container-page label {
+    color: white;
+    font-size: 1.1rem;
+}
+
+/* Select */
+.container-page select {
+    padding: 8px 12px;
+    border-radius: 6px;
+    border: none;
+    font-size: 1rem;
+}
+
+/* Bouton */
+.btn-primary {
+    background-color: #ffb703;
+    color: #003049;
+    border: none;
+    padding: 10px 18px;
+    border-radius: 20px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.btn-primary:hover {
+    background-color: #ffa500;
+}
