modif du css encore une fois de export et puis du php

--- a/projet/assets/css/style.css
+++ b/projet/assets/css/style.css
@@ -1546,3 +1546,19 @@ h2[style*="margin-top: 40px"] {
 .btn-primary:hover {
     background-color: #ffa500;
 }
+
+.connexion{
+  display: block; /* enlève le centrage flex */
+}
+
+.container-page{
+  margin-top: 40px;   /* espace sous la navbar */
+  text-align: center;
+}
+
+.container-page form{
+  margin-top: 25px;
+  display: inline-flex;
+  align-items: center;
+  gap: 15px;
+}
