--- a/projet/assets/css/style.css
+++ b/projet/assets/css/style.css
@@ -2,7 +2,7 @@
 html, body {
     margin: 0;
     padding: 0;
-   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; /* Style de la police*/
 }
 
 .accueil {
